Load template, load placeholder, write data to placeholder